plugins {
    java
    id("org.springframework.boot") version "3.5.9"
    id("io.spring.dependency-management") version "1.1.7"
}

group = "com.simpleblog"
version = "0.1.0"

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-graphql")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-aop")
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("org.springframework.boot:spring-boot-starter-data-redis")
    implementation("org.springframework.boot:spring-boot-starter-data-elasticsearch")
    implementation("org.springframework.boot:spring-boot-starter-amqp")
    implementation("org.springframework.boot:spring-boot-starter-actuator")

    implementation("com.baomidou:mybatis-plus-boot-starter:3.5.16")
    implementation("com.baomidou:mybatis-plus-extension:3.5.16")
    implementation("com.baomidou:mybatis-plus-jsqlparser:3.5.16")
    implementation("org.mybatis:mybatis-spring:3.0.5")
    compileOnly("org.postgresql:postgresql")
    runtimeOnly("org.postgresql:postgresql")

    implementation("com.graphql-java:graphql-java-extended-scalars:22.0")

    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")

    implementation("software.amazon.awssdk:s3:2.32.9")
//    implementation("software.amazon.awssdk:s3-presigner:2.32.9")

    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.security:spring-security-test")

    // mail
    implementation("org.springframework.boot:spring-boot-starter-mail:3.5.9")
//    implementation("org.springframework:spring-context-support:7.0.3")

    implementation("org.springframework.boot:spring-boot-starter-data-elasticsearch:3.5.9")
    // Lombok dependencies
    compileOnly("org.projectlombok:lombok:1.18.30")
    annotationProcessor("org.projectlombok:lombok:1.18.30")
    testCompileOnly("org.projectlombok:lombok:1.18.30")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.30")

}

tasks.withType<Test> {
    useJUnitPlatform()
}

tasks.withType<org.springframework.boot.gradle.tasks.run.BootRun> {
    jvmArgs("-Dfile.encoding=UTF-8")
}
